[gd_scene load_steps=7 format=3 uid="uid://ben6x4qpiovfq"]

[ext_resource type="Script" path="res://mainAssets/ui/3dui/loading_halo.gd" id="1_t6gg2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7xpd5"]
cull_mode = 1
shading_mode = 0
albedo_color = Color(0, 0, 0, 1)
grow = true
grow_amount = 0.01

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_80pj7"]
next_pass = SubResource("StandardMaterial3D_7xpd5")
shading_mode = 0
albedo_color = Color(0.6, 0.466667, 1, 1)
grow_amount = -0.015

[sub_resource type="TorusMesh" id="TorusMesh_gbg2y"]
material = SubResource("StandardMaterial3D_80pj7")
outer_radius = 0.61

[sub_resource type="Animation" id="Animation_sgnvc"]
resource_name = "rotate"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, -0.523599), Vector3(0, -3.14159, -0.523599), Vector3(0, -6.28319, -0.523599)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dtajc"]
_data = {
"rotate": SubResource("Animation_sgnvc")
}

[node name="loading halo" type="Node3D"]
script = ExtResource("1_t6gg2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.358049, 0.20672, 0.508027, -0.3275, 0.567247, 0, -0.439965, -0.254014, 0.41344, 0, 0, 0)
mesh = SubResource("TorusMesh_gbg2y")
skeleton = NodePath("../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="MeshInstance3D"]
speed_scale = 0.5
libraries = {
"": SubResource("AnimationLibrary_dtajc")
}

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.556886, 0.321519, -0.124608, -0.3275, 0.567247, 0, 0.107913, 0.0623039, 0.643038, 0, 0, 0)
mesh = SubResource("TorusMesh_gbg2y")
skeleton = NodePath("../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="MeshInstance3D2"]
speed_scale = 0.6
libraries = {
"": SubResource("AnimationLibrary_dtajc")
}

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.218801, -0.126325, 0.604312, -0.3275, 0.567247, 0, -0.52335, -0.302156, -0.25265, 0, 0, 0)
mesh = SubResource("TorusMesh_gbg2y")
skeleton = NodePath("../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="MeshInstance3D3"]
speed_scale = 0.4
libraries = {
"": SubResource("AnimationLibrary_dtajc")
}

[node name="MeshInstance3D4" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.564651, -0.326002, 0.0625888, -0.3275, 0.567247, 0, -0.0542034, -0.0312944, -0.652003, 0, 0, 0)
mesh = SubResource("TorusMesh_gbg2y")
skeleton = NodePath("../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="MeshInstance3D4"]
speed_scale = 0.3
libraries = {
"": SubResource("AnimationLibrary_dtajc")
}
